--- a/src/component/products/Products.css
+++ b/src/component/products/Products.css
@@ -1,28 +1,22 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Bree+Serif&family=EB+Garamond:ital,wght@0,500;1,800&display=swap");
 
 body {
-background: #DFC2F2;
-	background-image: linear-gradient( to right, #ffffb3,#ffe6e6);
-	background-attachment: fixed;	
+	background: #dfc2f2;
+	background-image: linear-gradient(to right, #ffffb3, #ffe6e6);
+	background-attachment: fixed;
 	background-size: cover;
-  
-	}
+}
 
-#container{
+#container {
 	box-shadow: 0 15px 30px 1px grey;
-	background: rgba(255, 255, 255, 0.90);
+	background: rgba(255, 255, 255, 0.9);
 	text-align: center;
 	border-radius: 5px;
 	overflow: hidden;
 	margin: 5em auto;
 	height: 350px;
 	width: 700px;
-  
-	
 }
-
-
 
 .product-details {
 	position: relative;
@@ -32,26 +26,24 @@ background: #DFC2F2;
 	height: 100%;
 	float: left;
 	width: 40%;
-
 }
 
-#container .product-details h1{
-	font-family: 'Bebas Neue', cursive;
+#container .product-details h1 {
+	font-family: "Bebas Neue", cursive;
 	display: inline-block;
 	position: relative;
 	font-size: 30px;
-	color: #344055;
+	color: #f2f4f7;
 	margin: 0;
-	
 }
 
-#container .product-details h1:before{
+#container .product-details h1:before {
 	position: absolute;
-	content: '';
-	right: 0%; 
+	content: "";
+	right: 0%;
 	top: 0%;
 	transform: translate(25px, -15px);
-	font-family: 'Bree Serif', serif;
+	font-family: "Bree Serif", serif;
 	display: inline-block;
 	background: #ffe6e6;
 	border-radius: 5px;
@@ -60,13 +52,7 @@ background: #DFC2F2;
 	color: white;
 	margin: 0;
 	animation: chan-sh 6s ease infinite;
-
 }
-
-
-
-	
-
 
 .hint-star {
 	display: inline-block;
@@ -75,75 +61,77 @@ background: #DFC2F2;
 	width: 50%;
 }
 
-
 #container .product-details > p {
-font-family: 'EB Garamond', serif;
+	font-family: "EB Garamond", serif;
 	text-align: center;
 	font-size: 18px;
 	color: #7d7d7d;
-	
 }
-.control{
+.control {
 	position: absolute;
 	bottom: 20%;
 	left: 22.8%;
-	
 }
 .btn {
-
 	transform: translateY(0px);
 	transition: 0.3s linear;
-	background:  #809fff;
+	background: #809fff;
 	border-radius: 5px;
-  position: relative;
-  overflow: hidden;
+	position: relative;
+	overflow: hidden;
 	cursor: pointer;
 	outline: none;
 	border: none;
 	color: #eee;
 	padding: 0;
-	margin: 0;
-	
 }
 
-.btn:hover{transform: translateY(-6px);
-	background: #1a66ff;}
+.btn:hover {
+	transform: translateY(-6px);
+	background: #1a66ff;
+}
 
 .btn span {
-	font-family: 'Farsan', cursive;
+	font-family: "Farsan", cursive;
 	transition: transform 0.3s;
 	display: inline-block;
-  padding: 10px 20px;
+	padding: 10px 20px;
 	font-size: 1.2em;
-	margin:0;
-	
+	margin: 0;
 }
-.btn .price, .shopping-cart{
+.btn .price,
+.shopping-cart {
 	background: #333;
 	border: 0;
 	margin: 0;
 }
 
 .btn .price {
-	transform: translateX(-10%); padding-right: 15px;
+	transform: translateX(-10%);
+	padding-right: 15px;
 }
 
 .btn .shopping-cart {
 	transform: translateX(-100%);
-  position: absolute;
+	position: absolute;
 	background: #333;
 	z-index: 1;
-  left: 0;
-  top: 0;
+	left: 0;
+	top: 0;
 }
 
-.btn .buy {z-index: 3; font-weight: bolder;}
+.btn .buy {
+	z-index: 3;
+	font-weight: bolder;
+}
 
-.btn:hover .price {transform: translateX(-110%);}
+.btn:hover .price {
+	transform: translateX(-110%);
+}
 
-.btn:hover .shopping-cart {transform: translateX(0%);}
-
-
+.btn:hover .shopping-cart {
+	transform: translateX(0%);
+}
 
 .product-image {
 	transition: all 0.3s ease-out;
@@ -156,30 +144,45 @@ font-family: 'EB Garamond', serif;
 	display: inline-block;
 }
 
-#container img {width: 100%;height: 100%;}
-
-.info {
-    background: rgba(27, 26, 26, 0.9);
-    font-family: 'Bree Serif', serif;
-    transition: all 0.3s ease-out;
-    transform: translateX(-100%);
-    position: absolute;
-    line-height: 1.8;
-    text-align: left;
-    font-size: 105%;
-    cursor: no-drop;
-    color: #FFF;
-    height: 100%;
-    width: 100%;
-    left: 0;
-    top: 0;
+#container img {
+	width: 100%;
+	height: 100%;
 }
 
-.info h2 {text-align: center}
-.product-image:hover .info{transform: translateX(0);}
+.info {
+	background: rgba(27, 26, 26, 0.9);
+	font-family: "Bree Serif", serif;
+	transition: all 0.3s ease-out;
+	transform: translateX(-100%);
+	position: absolute;
+	line-height: 1.8;
+	text-align: left;
+	font-size: 105%;
+	cursor: no-drop;
+	color: #fff;
+	height: 100%;
+	width: 100%;
+	left: 0;
+	top: 0;
+}
 
-.info ul li{transition: 0.3s ease;}
-.info ul li:hover{transform: translateX(50px) scale(1.3);}
+.info h2 {
+	text-align: center;
+}
+.product-image:hover .info {
+	transform: translateX(0);
+}
 
-.product-image:hover img {transition: all 0.3s ease-out;}
-.product-image:hover img {transform: scale(1.2, 1.2);}
+.info ul li {
+	transition: 0.3s ease;
+}
+.info ul li:hover {
+	transform: translateX(50px) scale(1.3);
+}
+
+.product-image:hover img {
+	transition: all 0.3s ease-out;
+}
+.product-image:hover img {
+	transform: scale(1.2, 1.2);
+}
