tetch api class

--- a/src/component/products/Products.css
+++ b/src/component/products/Products.css
@@ -72,7 +72,7 @@ body {
 	bottom: 20%;
 	left: 22.8%;
 }
-.btn {
+.btnProduct {
 	transform: translateY(0px);
 	transition: 0.3s linear;
 	background: #809fff;
