--- a/src/component/counter/Counter.css
+++ b/src/component/counter/Counter.css
@@ -25,8 +25,9 @@ h1 {
 .btn {
     text-align: center;
     margin: auto;
-    margin-left: 80px;
-    margin-top: 80px;
-    width: 100px;
-    height: 50px;
+    margin-left: 676px;
+    margin-top: 50px;
+    margin-bottom: 80px;
+    width: 218px;
+    height: 72px;
 }
